--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Обо мне</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,22 +18,12 @@
             <h1>Арсений</h1>
             <p>Учучь в ВГУ на ФКН</p>
             
-            <div class="social-links">
+            <div>
 				<h2 class="section-title">Где меня можно найти:</h2>
-    
-				<div class="social-buttons-container">
-					<a href="https://vk.com/arsenijberson" class="social-button">
-						<i class="fab fa-vk"></i>
-						ВКонтакте
-					</a>
-					<a href="https://t.me/twenli" class="social-button">
-						<i class="fab fa-telegram"></i>
-						Telegram
-					</a>
-					<a href="https://steamcommunity.com/profiles/76561199137029287" class="social-button">
-						<i class="fab fa-github"></i>
-						Steam
-					</a>
+				<div>
+					<a class="btn btn-primary btn-lg" href="https://vk.com/arsenijberson" role="button">ВКонтакте</a>
+					<a class="btn btn-primary btn-lg" href="https://t.me/twenli" role="button">Telegram</a>
+					<a class="btn btn-primary btn-lg" href="https://steamcommunity.com/profiles/76561199137029287" role="button">Steam</a>
 				</div>
 			</div>
         </div>
